--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,7 @@ h2 {
 
 p {
   font-size: 1.1rem;
+  line-height: 1.5;
 }
 
 ul {
@@ -33,18 +34,24 @@ ul {
   display: none;
 }
 
+a {
+  cursor: pointer;
+  text-decoration: none;
+  color: #444649;
+}
+
 .container {
   display: grid;    
   grid-template-columns: 1fr;
-  grid-auto-rows: minmax(70px, auto);
+  grid-template-rows: minmax(70px, auto);
   grid-template-areas: 
-  "navbar"
-  "hero"
-  "about"
-  "skills"
-  "work"
-  "connect"
-  "footer"
+    "navbar"
+    "hero"
+    "about"
+    "skills"
+    "work"
+    "connect"
+    "footer"
   ;
 }
 
@@ -69,4 +76,41 @@ ul {
   grid-area: footer;
   background-color: #f8f8f8;
   color: #b4b4b4;
+}
+
+#work {
+  grid-area: work;
+}
+
+.project-container {
+  margin: 20% auto 10% auto;
+}
+
+.project-container img {
+  width: 100%;
+}
+
+#connect {
+  grid-area: connect;
+  margin: 5%;
+}
+
+.social-grid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.social-grid img {
+  width: 30%;
+  margin: 6%;
+}
+
+.text-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50%;
+  cursor: pointer;
 }
