--- a/styles/main.css
+++ b/styles/main.css
@@ -41,10 +41,10 @@ a {
 }
 
 .container {
-  display: grid;    
+  display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: minmax(70px, auto);
-  grid-template-areas: 
+  grid-template-areas:
     "navbar"
     "hero"
     "about"
@@ -92,7 +92,7 @@ a {
 
 #connect {
   grid-area: connect;
-  margin: 5%;
+  margin: 3% 3% 15% 3%;
 }
 
 .social-grid {
@@ -113,4 +113,9 @@ a {
   align-items: center;
   width: 50%;
   cursor: pointer;
+}
+
+.full-logo {
+  width: 90%;
+  margin: 7% auto 0% auto;
 }
