--- a/styles/hero.css
+++ b/styles/hero.css
@@ -23,3 +23,30 @@
 .highlight {
   color: #F27494;
 }
+
+@media (min-width: 600px) and (max-width: 900px) {
+  .hero-text {
+    width: 55vw;
+    height: 45vh;
+    font-size: 3.3rem;
+    padding: 5%;
+  }
+}
+
+@media (min-width:901px) {
+  #hero {
+    height: 95vh;
+    justify-content: flex-end !important;
+  }
+
+  .hero-text {
+    background-color: transparent;
+    width: 60vw;
+    height: 50vh;
+    font-size: 4.5rem;
+    text-align: center !important;
+    opacity: 0.8;
+    border-radius: 5px;
+    padding: 5%;
+  }
+}
