--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@
 @import url("./hero.css");
 @import url("./about.css");
 @import url("./skills.css");
+@import url("./work.css");
+@import url("./connect.css");
 
 body {
   font-family: 'Roboto', sans-serif !important;
@@ -69,53 +71,48 @@ a {
 
 .landing-container {
   text-align: center;
-  padding: 1% 5% 1% 5%;
+  padding: 2%;
 }
 
 #footer {
   grid-area: footer;
-  background-color: #f8f8f8;
+  background-color: #f9f9f9;
   color: #b4b4b4;
 }
 
-#work {
-  grid-area: work;
+@media (min-width: 600px) and (max-width: 900px) {
+  body {
+    margin-top: 14%;
+  }
+
+  h1 {
+    border-bottom: 5px solid #f27494;
+    margin: 8% auto;
+    font-size: 3.3rem;
+  }
+
+  p {
+    font-size: 1.4rem;
+  }
 }
 
-.project-container {
-  margin: 20% auto 10% auto;
-}
+@media (min-width:901px) {
+  body {
+    margin-top: 4.5%;
+  }
 
-.project-container img {
-  width: 100%;
-}
+  h1 {
+    border-bottom: 5px solid #f27494;
+    margin: 3% auto;
+    font-size: 3.3rem;
+  }
 
-#connect {
-  grid-area: connect;
-  margin: 3% 3% 15% 3%;
-}
+  p {
+    font-size: 1.4rem;
+  }
 
-.social-grid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.social-grid img {
-  width: 30%;
-  margin: 6%;
-}
-
-.text-start {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 50%;
-  cursor: pointer;
-}
-
-.full-logo {
-  width: 90%;
-  margin: 7% auto 0% auto;
+  .landing-container {
+    text-align: center;
+    padding: 0%;
+  }
 }
